# Neurogenesis

./: .gitignore  AE01.py  Neurogenesis.py  README.md  environment.yml  generate_gif.py  pyproject.toml  setup.py
config/: config.yaml  neurogenesis.yaml  notebook_config.yaml  notebook_config_sd19.yaml  train.yaml
docs/: algorithm_fidelity.md  experiment_solution_blueprint.md  full_replication_report_2026-07-14.md  notebook_experiment_workflow.md  notebook_scripts_overview.md  organic_growth_ablation_results_2026-07-13.md  paper_compatible_optimization_plan.md  performance_tuning_variables.md  post_replication_optimization_results_2026-07-14.md  predictive_coding_extension_results_2026-07-14.md  replication_gap_analysis.md  replication_validation_plan.md
legacy/: Neurogenesis.py  blub.py  import torch.py  test.py
notebooks/: demo.ipynb  notebook_test.py  train_mnist_neurogenesis.py  train_nsitsd19.py
scripts/: __init__.py  benchmark_training_resources.py  export_replication_figure_data.py  gen_inits.py  generate_mnist_replication_analysis.py  plot_paper_results.py  plot_post_replication_optimization.py  plot_predictive_coding_comparison.py  plot_replication_report.py  plot_sd19_comparison.py  plot_training_resources.py  recreate_figure4.py  recreate_mnist_baseline_optimization.py  recreate_mnist_cl.py  recreate_mnist_cl_ir.py  recreate_mnist_fidelity_debug.py  recreate_mnist_ndl.py  recreate_mnist_ndl_ir.py  recreate_mnist_paperfit_balanced.py  recreate_mnist_paperfit_fidelity.py  recreate_mnist_paperfit_fidelity_quality.py  recreate_paper.py  recreate_sd19_ndl.py  (+23 more)
(+150 files in other folders)
