[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurogenesis"
version = "0.1.0"
dependencies = [
  "torch>=2.2",
  "torchvision",
  "pytorch-lightning>=2.2",
  "hydra-core",
  "tensorboard",
  "numpy",
  "matplotlib",
  "mlflow",
  "omegaconf",
  "pillow",
  "tqdm"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["*.egg-info", "*.egg-info.*", "*.pycache*", "*.__pycache__*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["I"]   # isort-style import ordering

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
